<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#b9b9b9">

    <TextView
        android:id="@+id/difficultyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/select_difficulty"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/difficulties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/difficultyTitle"
        app:layout_constraintTop_toBottomOf="@+id/difficultyTitle">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#b9b9b9"
            android:text="@string/easy"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#b9b9b9"
            android:text="@string/normal"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#b9b9b9"
            android:text="@string/hard"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#b9b9b9"
            android:text="@string/custom"
            android:textSize="18sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/rowsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:ems="5"
        android:hint="@string/rows"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/difficulties"
        app:layout_constraintTop_toBottomOf="@+id/difficulties"
        android:autofillHints="" />

    <EditText
        android:id="@+id/columnsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/columns"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/rowsEditText"
        app:layout_constraintTop_toBottomOf="@+id/rowsEditText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/minesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/mines"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/columnsEditText"
        app:layout_constraintTop_toBottomOf="@+id/columnsEditText"
        android:autofillHints="" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="#b9b9b9"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/ok"
        android:textColor="#404040"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minesEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>